# modularity-with-information-gates

./: .gitignore  .gitmodules  README.md  Readme.ipynb  ae.py  bir_aae.py  listran.py  main.py  mnist_reconstruct.py  pyproject.toml  replit.nix  requirements.txt
mx/: metrics.py  progress.py
