[tool.poetry]
name = "learned-information-gates"
version = "0.1.0"
description = "Modularity loss with learned information gating"
authors = ["Max Clarke <maxeonyx@gmail.com>"]
license = "None"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10, <3.12"
einml = {path = "../einml-py-tf", develop = true}

[tool.pyright]
reportWildcardImportFromLibrary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
